--- a/app/assets/stylesheets/content/_accounts.sass
+++ b/app/assets/stylesheets/content/_accounts.sass
@@ -49,7 +49,7 @@
 
 // use id selectors to be specific enough to override general content and top-menu definitions
 #content .login-auth-providers, #top-menu #nav-login-content .login-auth-providers,
-.modal-wrapper .login-auth-providers, #top-menu #nav-login-content .login-auth-providers
+.modal-wrapper .login-auth-providers
   width: 471px
   margin-top: 25px
 
@@ -85,7 +85,7 @@
     span
       // to hide the lines from behind the text, you have to set the
       // background color the same as the container
-      background: $header-drop-down-bg-color
+      background: $content-form-bg-color
       padding: 0 15px
 
   .login-auth-provider-list
@@ -99,8 +99,7 @@
     background-image: image-url('auth_provider-developer.png')
     background-size: 20px 20px
     background-repeat: no-repeat
-    background-position-x: 5px
-    background-position-y: center
+    background-position: 5px center
     background-color: light-grey
     font-weight: normal
     color: $body-font-color
@@ -112,10 +111,15 @@
       line-height: normal
       white-space: normal
 
+.modal-wrapper .login-auth-providers h3 span
+  background: $header-drop-down-bg-color
+
 #top-menu #nav-login-content .login-auth-providers
   h3
     &:before
       width: 100%
+    span
+      background: $header-drop-down-bg-color
   .login-auth-provider-list
     margin-top: -15px
     margin-bottom: 10px
